--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ home = ["HTML", "RSS", "JSON"]  # Necessário para Search
 tag = "tags"  # Ativa Tags (use em front matter de posts: tags = ["tag1", "tag2"])
 
 defaultContentLanguage = "pt-br"
-defaultContentLanguageInSubdir = false
+defaultContentLanguageInSubdir = true
 
 [languages]
   [languages.pt-br]
@@ -123,3 +123,5 @@ defaultContentLanguageInSubdir = false
     favicon16x16 = "/favicon-16x16.png"
     favicon32x32 = "/favicon-32x32.png"
     apple_touch_icon = "/apple-touch-icon.png"
+
+mainSections = ["posts"]
